--- a/index.html
+++ b/index.html
@@ -1,30 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		<title>Bhareth Kachroo, Watercooler Demon</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/projects">Projects</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Bhareth Kachroo!</h1>
-				<p>I'm human. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:bhareth.kachroo@gmail.com">email</a></li>
-        		<li><a href="https://github.com/bkachroo">github.com/bkachroo</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Bhareth Kachroo, Watercooler Demon
+<div class="blurb">
+	<h1>Hi there, I'm Bhareth Kachroo!</h1>
+	<p>I'm human. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
