--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Bhareth Kachroo, Watercooler Demon
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Bhareth Kachroo!</h1>
-	<p>I'm human. <a href="/about">Read more about my life...</a></p>
+	<p>I'm human. <a href="/cv">Read more about my life...</a></p>
 </div><!-- /.blurb -->
