--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Bhareth Kachroo, Watercooler Demon
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Bhareth Kachroo!</h1>
-	<p>I'm human. <a href="/cv">Read more about my life...</a></p>
+	<h1>Would a Bhareth Kachroo by any other name smell as sweet?</h1>
+	<p>Unlikely. <a href="/cv">The portrait of the young man as a job seeker...</a></p>
 </div><!-- /.blurb -->
